force-app/main/default/objects/TipoPlanilla__c/TipoPlanilla__c.object-meta.xml
<CustomObject>
    <label>Tipo Planilla</label>
    <nameField>
        <label>Nombre de TipoPlanilla</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipo Planillas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>