force-app/main/default/objects/TipoPlanilla__c/fields/Insertar_Tipo_Moneda__c.field-meta.xml
<CustomField>
    <fullName>Insertar_Tipo_Moneda__c</fullName>
    <description>En esta tabla inserta el tipo de moneda ya sea USD o HNL se creara una regla que al final del día se borren todos los campos contenidos en esta tabla, para así eliminar el almacenamiento innecesario</description>
    <label>Insertar Tipo Moneda</label>
    <length>3</length>
    <type>Text</type>
</CustomField>