force-app/main/default/objects/TipoPlanilla__c/fields/ListaEC__c.field-meta.xml
<CustomField>
    <fullName>ListaEC__c</fullName>
    <label>ListaEC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HNL</fullName>
                <label>Lempira</label>
            </value>
            <value>
                <fullName>USD</fullName>
                <label>Dolar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>