force-app/main/default/objects/TipoPlanilla__c/fields/Numeracion_Automatica__c.field-meta.xml
<CustomField>
    <fullName>Numeracion_Automatica__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Numeracion Automatica</label>
    <type>AutoNumber</type>
</CustomField>