force-app/main/default/objects/TipoPlanilla__c/fields/Usuario_Sistema__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Sistema__c</fullName>
    <label>Usuario Sistema</label>
    <length>20</length>
    <type>Text</type>
</CustomField>